O'zgartrildi about.html

--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <h1>Salom dunyo</h1>
   <span id="scrollTopBtn"><i class="fas fa-arrow-up"></i></span>
   <!--Header-->
   <header>
